--- a/src/Style/HomePageStyle.css
+++ b/src/Style/HomePageStyle.css
@@ -4,8 +4,7 @@
     
 }
 .title{
-    display: grid;
-    place-items: center;
+
     margin: auto;
     width: 50%;
 }
@@ -44,4 +43,6 @@
     position: absolute;
     width: 100%;
     bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
 }
