--- a/src/Style/PokedexPageStyle.css
+++ b/src/Style/PokedexPageStyle.css
@@ -4,9 +4,14 @@
     margin: auto;
     
 }
-
+.page__title{
+    position: absolute;
+    margin: 1em;
+    width: 30%;
+}
 .pokedex__info p {
     color: #FE1936;
+    margin-top: 11em;
 }
 .pokedex__form{
     display: flex;
@@ -39,5 +44,7 @@
 }
 .pokedex__card{
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
 }
