--- a/src/Style/PokedexIdPageStyle.css
+++ b/src/Style/PokedexIdPageStyle.css
@@ -1,7 +1,13 @@
 
+.page__container{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
 .info__container{
-    display: grid;
-    place-items: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     width: 100%;
     max-width: 900px;
 }
@@ -66,6 +72,8 @@
 }
 .info__special{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .type{
     display: grid;
@@ -133,6 +141,28 @@
 }
 .menu__stat{
     animation: barr-stat 2s forwards;
+}
+.movements__container{
+    width: 100%;
+    max-width: 700px;
+    margin-top: 2.5em;
+    margin-bottom: 2.5em;
+    border-radius: 0.5em;
+    box-shadow: 1px 5px 5px 10px rgba(0, 0, 0, 0.3);    
+}
+.movements__list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.move__content{
+    display: grid;
+    place-items: center;
+    border-radius: 0.5em;
+    background: #E5E5E5;
+    margin: 0.5em;
+    width: 9em;
+    height: 2em;
 }
 
 /********** Gradient **********/
