--- a/src/Style/PokedexPageStyle.css
+++ b/src/Style/PokedexPageStyle.css
@@ -15,7 +15,7 @@
 }
 .pokedex__form{
     display: flex;
-    box-shadow: 4px 5px 5px  rgba(0, 0, 0, .5);
+    box-shadow: 0 5px 5px  rgba(0, 0, 0, .5);
     border: 1px solid black;
     border-radius: 5px;
     margin-bottom: 1em;
