--- a/src/Style/PokedexIdPageStyle.css
+++ b/src/Style/PokedexIdPageStyle.css
@@ -53,7 +53,7 @@
     display: grid;
     place-items: center;
     border: 1px solid black;
-    width: 2.5em;
+    width: 5rem;
     margin-top: 1rem;
 }
 .info__name{
